--- a/style.css
+++ b/style.css
@@ -1,25 +1,18 @@
 html {
     overflow:  hidden;
-
-
-
+    width: 3px;
 }
 
 
 body {
     margin: 0%;
-    height: 100vh;
-   
-    
+     
 }
 
 #foto {
     height: 100vh;        
 }
 
-.body-contane {
-   
-}
 
 #grid {
     display: grid;
