--- a/style.css
+++ b/style.css
@@ -26,5 +26,11 @@ body {
     grid-template-rows: repeat(3, 1fr);
 } 
 
+.gridCell {
+    margin: auto;
+    text-align: center;
+    color: #FFFFFF  ;
+}
+
 
 
